Solve first 6 out of 13 Challenges
1. I can provide my own url (gitpod, github)
2. Only allow my site to be loaded in iFrames from my own page
3. Dont allow DNS prefetching
4. Only allow my site to be referrer for my own pages
5. POST request to /api/threads/:board
6. POST request to /api/replies/:board

--- a/views/index.html
+++ b/views/index.html
@@ -51,10 +51,10 @@
         
         <h4>New reply (POST /api/replies/:board)</h4>
         <form action="/api/replies/test" method="post" id="newReply">
-          <input type='text' placeholder='board' id='board4' name='board' required=''><br>
-          <input type='text' placeholder='thread id' name='thread_id' required=''><br>
-          <textarea type='text' placeholder='Thread text...' name='text' required=''></textarea><br>
-          <input type='text' placeholder='password to delete' name='delete_password' required=''><br>
+          <input type='text' placeholder='board' id='board4' name='board' required='' value="testboard"><br>
+          <input type='text' placeholder='thread id' name='thread_id' value="987654321" required=''><br>
+          <textarea type='text' placeholder='Thread text...' name='text' required=''>testingtestytestalicioustestymonus</textarea><br>
+          <input type='text' placeholder='password to delete' name='delete_password' value="123" required=''><br>
           <input type="submit" value="Submit">
         </form>
         <hr>
