--- a/views/thread.html
+++ b/views/thread.html
@@ -26,7 +26,7 @@
       $(function() {
         var currentURL = window.location.pathname.slice(3);
         currentURL = currentURL.split('/');
-        
+        console.log(currentURL)
         var url = "/api/replies/"+currentURL[0];
         $('#threadTitle').text(window.location.pathname);
         $.ajax({
