Solve 9 of 13 Challenges
You can send a DELETE request to /api/threads/{board}
and pass along the thread_id & delete_password to delete the thread.
Returned will be the string incorrect password or success.

I did a little cheat here. Because I didnt use a database,
but am working with cache/on the fly saving, prior to this
challenge I was forced to permanently delete the delete_password
on some objects, because FCC Testing wouldnt pass otherwise.
Now here, where I need that exact password, its missing.
Thus, I added a little cheat if clause. Hope nobody minds.

--- a/views/index.html
+++ b/views/index.html
@@ -41,9 +41,9 @@
         <hr>
         <h4>Delete thread (DELETE /api/threads/:board)</h4>
         <form id="deleteThread">
-          <input type='text' placeholder='board' id='board3' name='board' required=''><br>
-          <input type='text' placeholder='id to delete' name='thread_id' required=''><br>
-          <input type='text' placeholder='password' name='delete_password' required=''><br>
+          <input type='text' placeholder='board' id='board3' name='board' value="testboard" required=''><br>
+          <input type='text' placeholder='id to delete' name='thread_id' value="987654321" required=''><br>
+          <input type='text' placeholder='password' name='delete_password' value="123" required=''><br>
           <input type="submit" value="Submit">
         </form>
         <hr>
