--- a/views/index.html
+++ b/views/index.html
@@ -68,10 +68,10 @@
         <hr>
         <h4>Delete reply (DELETE /api/replies/:board)</h4>
         <form id="deleteReply">
-          <input type='text' placeholder='board' id='board6' name='board' required=''><br>
-          <input type='text' placeholder='thread id' name='thread_id' required=''><br>
-          <input type='text' placeholder='id to delete' name='reply_id' required=''><br>
-          <input type='text' placeholder='password' name='delete_password' required=''><br>
+          <input type='text' placeholder='board' id='board6' name='board' value="testboard" required=''><br>
+          <input type='text' placeholder='thread id' name='thread_id' value="987654321" required=''><br>
+          <input type='text' placeholder='id to delete' name='reply_id' value="0000" required=''><br>
+          <input type='text' placeholder='password' name='delete_password' value="123" required=''><br>
           <input type="submit" value="Submit">
         </form>        
     </div>
